fix: adjust the max width for breakpoint mixin
This fix the bug that the header was not visible in 1025px wide screens

--- a/okp4-gatsby/src/assets/styles/basics/_utils.scss
+++ b/okp4-gatsby/src/assets/styles/basics/_utils.scss
@@ -50,7 +50,7 @@
   $max: bp-min($name, $breakpoints);
 
   @if $max {
-    @media (max-width: $max) {
+    @media (max-width: ($max - 1px)) {
       @content;
     }
   } @else {
